Added List view to view expenses

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
 
         </intent-filter>
     </activity>
+        <activity android:name=".ViewExpense"
+            android:parentActivityName=".MainActivity" />
+
 </application>
 
 </manifest>
